--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -1,13 +1,4 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Kalam");
-* {
-  color: whitesmoke;
-}
-
-body {
-  background-color: #1e1e1e;
-}
-
 .title {
   font-size: 60px;
   font-weight: bold;
@@ -15,8 +6,24 @@ body {
   color: #f9f871;
   margin: 40px 0;
   font-family: "Kalam";
-  /* 밑에 테두리 */
   border-bottom: 1px solid #f9f871;
+}
+
+.btn {
+  border-color: #f9f871;
+  background-color: #1e1e1e;
+  color: whitesmoke;
+}
+.btn:hover {
+  background-color: #fab565;
+}
+
+* {
+  color: whitesmoke;
+}
+
+body {
+  background-color: #1e1e1e;
 }
 
 .input-base-color {
@@ -32,15 +39,6 @@ body {
   --bs-body-color-rgb: 255, 255, 255;
 }
 
-.btn {
-  border-color: #f9f871;
-  background-color: #1e1e1e;
-  color: whitesmoke;
-}
-.btn:hover {
-  background-color: #fab565;
-}
-
 .link-base-color {
   color: whitesmoke;
   text-decoration: none;
@@ -54,4 +52,4 @@ body {
   color: #f9f871;
 }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=login.css.map */
