--- a/frontend/scss/login.scss
+++ b/frontend/scss/login.scss
@@ -1,6 +1,7 @@
 @import 'colors';
 @import 'fonts';
 @import 'title';
+@import 'button';
 
 * {
 	color: $text-color;
@@ -21,15 +22,6 @@ body {
 		--bs-body-color-rgb: 255, 255, 255;
 	}
 	color: $text-color;
-}
-
-.btn {
-    border-color: $primary-color;
-    background-color: $background-color;
-	color: $text-color;
-    &:hover {
-        background-color: $hover-color;
-    }
 }
 
 .link-base-color {
