--- a/frontend/css/main-page.css
+++ b/frontend/css/main-page.css
@@ -1,15 +1,5 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Kalam");
-.title {
-  font-size: 60px;
-  font-weight: bold;
-  text-align: center;
-  color: #f9f871;
-  margin: 40px 0;
-  font-family: "Kalam";
-  border-bottom: 1px solid #f9f871;
-}
-
 body {
   background-color: #1e1e1e;
   margin-left: 200px;
@@ -25,37 +15,33 @@ body {
   overflow-y: auto; /* 내용이 넘칠 경우 스크롤 생성 */
   padding-top: 20px;
 }
-
 .sidebar .sidebar-header {
   padding: 20px;
 }
-
 .sidebar .sidebar-header img {
   max-width: 100%;
   height: auto;
   display: block;
   border-radius: 100%;
 }
-
 .sidebar .sidebar-header b {
+  font-family: "Kalam";
   font-size: 20px;
   margin-top: 10px;
   display: block;
   text-align: center;
   color: whitesmoke;
 }
-
 .sidebar .menu ul {
+  font-family: sans-serif;
   list-style-type: none;
   padding: 0;
   margin: 0;
   margin-top: 30px;
 }
-
 .sidebar .menu ul li {
   padding: 10px;
 }
-
 .sidebar .menu ul li a {
   padding: 5px;
   display: block;
@@ -64,25 +50,21 @@ body {
   text-decoration: none;
   color: whitesmoke;
 }
-
 .sidebar .menu ul li a:hover {
   color: #fab565;
 }
-
 .sidebar hr {
   color: whitesmoke;
   margin-bottom: 0;
 }
-
 .sidebar .friend-list .title {
   position: relative;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Kalam";
   margin-left: 30%;
   font-size: 17px;
   color: #f9f871;
   border-color: #3e3e3e;
 }
-
 .sidebar .friend-list .friend-add-button {
   position: relative;
   margin-left: 10%;
@@ -95,29 +77,24 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 .sidebar .friend-list .friend-add-button::before, .sidebar .friend-list .friend-add-button::after {
   content: "";
   position: absolute;
   margin-top: 5px;
   background-color: #f9f871;
 }
-
 .sidebar .friend-list .friend-add-button:hover:before, .sidebar .friend-list .friend-add-button:hover:after {
   background: #fab565;
   transition: 0.2s;
 }
-
 .sidebar .friend-list .friend-add-button::before {
   width: 60%;
   height: 3px;
 }
-
 .sidebar .friend-list .friend-add-button::after {
   width: 3px;
   height: 60%;
 }
-
 .sidebar .friend-list .friend-search-bar {
   display: block;
   width: 90%;
@@ -127,13 +104,12 @@ body {
   margin-right: auto;
   border-radius: 15px;
 }
-
 .sidebar .friend-list ul {
+  font-family: sans-serif;
   list-style-type: none;
   padding-left: 5px;
   padding-right: 5px;
 }
-
 .sidebar .friend-list ul li {
   position: relative;
   text-indent: 10px;
@@ -145,7 +121,6 @@ body {
   color: whitesmoke;
   border-radius: 10px;
 }
-
 .sidebar .friend-list ul li::after {
   content: "";
   position: absolute;
@@ -158,12 +133,21 @@ body {
   border-radius: 50%;
 }
 
+.title {
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;
+  color: #f9f871;
+  margin: 40px 0;
+  font-family: "Kalam";
+  border-bottom: 1px solid #f9f871;
+}
+
 .btn {
   border-color: #f9f871;
   background-color: #1e1e1e;
   color: whitesmoke;
 }
-
 .btn:hover {
   background-color: #fab565;
 }
@@ -193,11 +177,9 @@ button.btn-lg {
   border-color: whitesmoke;
   background-color: #1e1e1e;
 }
-
 .form-control::placeholder {
   color: whitesmoke;
 }
-
 .form-control:focus {
   color: whitesmoke;
   background-color: #1e1e1e;
@@ -213,7 +195,5 @@ button.btn-lg {
   height: 600px;
   background-color: #616060;
 }
-
-
 
 /*# sourceMappingURL=main-page.css.map */
