--- a/frontend/scss/tournament.scss
+++ b/frontend/scss/tournament.scss
@@ -54,17 +54,6 @@ h2 {
    margin-bottom: 2em;
 }
 
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0,0,0,0);
-  border: 0;
-}
-
 
 //
 // TOURNAMENT BRACKET
@@ -100,7 +89,6 @@ h2 {
   justify-content: center;
   height: 100%;
   min-height: 100%;
-  border-bottom: 1px dashed #e5e5e5;
   padding-bottom: 2em;
   margin-bottom: 2em;
   transition: padding 0.2s ease-in-out, margin 0.2s ease-in-out;
@@ -113,7 +101,6 @@ h2 {
   @media (min-width: $breakpoint-sm) {
     margin-bottom: 0;
     padding-bottom: 0;
-    border-right: 1px dashed #e5e5e5;
     border-bottom: 0;
   }
 
@@ -129,7 +116,7 @@ h2 {
   flex-direction: column;
   align-items: flex-start;
   position: relative;
-  padding: 2% 0;
+  // padding: 2% 0;
   width: 48%;
   transition: padding 0.2s linear;
 
@@ -214,7 +201,7 @@ h2 {
   }
 
   @media (min-width: $breakpoint-lg) {
-    padding: 0.5em 1.5em;
+    // padding: 0.5em 1.5em;
 
     &::after {
       width: 1.5em;
@@ -343,7 +330,7 @@ h2 {
       align-items: flex-end;
     }
 
-    & .tournament-bracket__country {
+    & .tournament-bracket__player {
       order: 2;
       justify-content: flex-end;
 
@@ -477,6 +464,7 @@ h2 {
   font-size: 0.95rem;
   background-color: #F5F5F5;
   border-color: spin(shade(#F5F5F5, 10%), -10);
+  color: #000;
 
   .tournament-bracket__team--winner & {
     background-color: #FFF176;
