--- a/frontend/css/main-page.css
+++ b/frontend/css/main-page.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Kalam");
 .title {
   font-size: 60px;
@@ -13,6 +14,7 @@
   border-color: #f9f871;
   background-color: #1e1e1e;
   color: whitesmoke;
+  display: block;
 }
 .btn:hover {
   background-color: #fab565;
@@ -25,6 +27,32 @@ body {
 h1 {
   font-family: "Kalam";
   color: #f9f871;
+}
+
+.title-container {
+  display: flex;
+  align-items: center;
+  gap: 10px; /* 이미지와 제목 사이의 간격 조정 */
+}
+
+.title-image {
+  width: 100px; /* 이미지 너비 설정 */
+  height: auto; /* 높이 자동 설정 */
+  border-radius: 50%; /* 이미지를 원형으로 만들기 위한 설정 (원하는 경우) */
+}
+
+.title-text {
+  font-size: 24px; /* 제목의 글꼴 크기 설정 */
+  color: #333; /* 제목 텍스트 색상 설정 */
+}
+
+.btn {
+  width: 200px; /* 고정 너비 설정 */
+  height: 50px; /* 고정 높이 설정 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 button.btn-lg {
@@ -60,6 +88,31 @@ button.btn-lg {
   width: 800px;
   height: 600px;
   background-color: #616060;
+}
+
+.userInfo {
+  color: whitesmoke;
+  font-family: "Kalam";
+  font-size: 30px;
+}
+
+.userImage {
+  width: 100px;
+  height: 100px;
+  border-radius: 20%;
+}
+
+.btn-logout {
+  float: right;
+  font-family: sans-serif;
+  border-color: whitesmoke;
+  border-radius: 10%;
+  background-color: whitesmoke;
+  color: black;
+  display: flex;
+}
+.btn-logout:hover {
+  background-color: #fab565;
 }
 
 /*# sourceMappingURL=main-page.css.map */
