--- a/frontend/scss/main-page.scss
+++ b/frontend/scss/main-page.scss
@@ -12,7 +12,30 @@ h1 {
     color: $primary-color;
 }
 
+.title-container {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* 이미지와 제목 사이의 간격 조정 */
+}
+
+.title-image {
+    width: 100px; /* 이미지 너비 설정 */
+    height: auto; /* 높이 자동 설정 */
+    border-radius: 50%; /* 이미지를 원형으로 만들기 위한 설정 (원하는 경우) */
+}
+
+.title-text {
+    font-size: 24px; /* 제목의 글꼴 크기 설정 */
+    color: #333; /* 제목 텍스트 색상 설정 */
+}
+
+
 .btn {
+    width: 200px;  /* 고정 너비 설정 */
+    height: 50px;  /* 고정 높이 설정 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     justify-content: center;
 }
 
@@ -51,4 +74,32 @@ button.btn-lg {
     width: 800px;
     height: 600px;
     background-color: #616060;
+}
+
+$sidebar-width: 200px;
+
+
+.userInfo {
+    color: $text-color;
+    font-family: $primary-font;
+    font-size: 30px;
+}
+
+.userImage {
+    width: 100px;
+    height: 100px;
+    border-radius: 20%;
+}
+
+.btn-logout {
+    float: right;
+    font-family: sans-serif;
+    border-color: $text-color;
+    border-radius: 10%;
+    background-color: whitesmoke;
+	color: black;
+    &:hover {
+        background-color: $hover-color;
+    }
+    display: flex;
 }
