[feat]: 토너먼트 결과창 완료

--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -13,6 +13,7 @@
   border-color: #f9f871;
   background-color: #1e1e1e;
   color: whitesmoke;
+  display: block;
 }
 .btn:hover {
   background-color: #fab565;
