--- a/frontend/css/tournament-result.css
+++ b/frontend/css/tournament-result.css
@@ -9,6 +9,16 @@
   border-bottom: 1px solid #f9f871;
 }
 
+.btn {
+  border-color: #f9f871;
+  background-color: #1e1e1e;
+  color: whitesmoke;
+  display: block;
+}
+.btn:hover {
+  background-color: #fab565;
+}
+
 *, *::before, *::after {
   box-sizing: border-box;
 }
