--- a/frontend/css/profile.css
+++ b/frontend/css/profile.css
@@ -15,6 +15,7 @@
   border-color: #f9f871;
   background-color: #1e1e1e;
   color: whitesmoke;
+  display: block;
 }
 .btn:hover {
   background-color: #fab565;
@@ -26,6 +27,7 @@ body {
 }
 
 .sidebar {
+  place-items: center;
   width: 200px;
   background-color: #3e3e3e;
   height: 100vh; /* 화면 전체 높이 */
@@ -51,6 +53,22 @@ body {
   display: block;
   text-align: center;
   color: whitesmoke;
+}
+.sidebar .menu button {
+  background-color: #3e3e3e;
+  border-style: none;
+  font-family: sans-serif;
+  font-size: 17px;
+  margin-left: 23%;
+}
+.sidebar .menu button:hover {
+  color: #fab565;
+}
+.sidebar .menu button:focus {
+  color: whitesmoke;
+}
+.sidebar .menu .dropdown-menu {
+  background-color: rgb(49, 52, 52);
 }
 .sidebar .menu ul {
   font-family: sans-serif;
